--- a/LA.html
+++ b/LA.html
@@ -4,17 +4,18 @@
         <title>Los Angeles Census Tracts</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <style>
-        html, body {
-          border: 0;
-          margin: 0;
-          padding: 0;
-          width: 100%;
-          height: 100%;
-          overflow: hidden;
-        }
-        #map {
-          height: 100%;
-        }        
+            html, body {
+              border: 0;
+              margin: 0;
+              padding: 0;
+              width: 100%;
+              height: 100%;
+              overflow: hidden;
+            }
+            #map {
+              height: 100%;
+            }        
+        </style>
 
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css">
         <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet-src.js"></script>
@@ -26,51 +27,54 @@
     <body>
         
 
-        <div id="map_main"></div>
+        <div id="map"></div>
        
 
         <script type="text/javascript">
 
-            var geoJSON = [
-                {
-                    "type":"FeatureCollection",
-                    "crs":{"type":"name",
-                        "properties":{"name":"urn:ogc:def:crs:OGC:1.3:CRS84"}
-                    },
-                    "features":[{
-                        "type":"Feature",
-                        "properties":{
+            var geoJSON = {
+                "type":"FeatureCollection",
+                "crs":{"type":"name",
+                    "properties":{"name":"urn:ogc:def:crs:OGC:1.3:CRS84"}
+                },
+                "features":[{
+                    "type":"Feature",
+                    "properties":{
                             "LotSales":170069,
                             "SalPPerson":58,
                             "height":58,
                             "minHeight":0,
                             "wallColor": "rgb(255,0,0)",
                             "roofColor": "rgb(255,128,0)"
-                        },
-                        "geometry":{
-                            "type":"Polygon",
-                            "coordinates":[[
+                    },
+                    "geometry":{
+                        "type":"Polygon",
+                        "coordinates":[[
                                 [-118.38103100008132,34.04532399970256],
                                 [-118.37681900009754,34.044532000051476],
                                 [-118.37720599995767,34.03824199956839],
                                 [-118.38295099958968,34.039821999585364],
                                 [-118.38103100008132,34.04532399970256]
                                 ]
-                            ]
-                        }
-                    }]
-                }
-            ];
+                        ]
+                    }
+                }]
+            };
 
+            var map = L.map('map').setView([34.061148, -118.310832], 12);  
 
-            var map = new L.Map('map_main').setView([34.04532399970256, -118.38103100008132], 12);
+            new L.Control.Zoom({position: 'bottomleft'}).addTo(map);
+
             L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IjZjNmRjNzk3ZmE2MTcwOTEwMGY0MzU3YjUzOWFmNWZhIn0.Y8bhBaUMqFiPrDRW9hieoQ', {
-            maxZoom: 18,
-            attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-                '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-                'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-            id: 'mapbox.light'
+                maxZoom: 18,
+                attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+                    '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                    'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+                id: 'mapbox.light'
             }).addTo(map);
+
+
+            L.geoJson(geoJSON).addTo(map);
 
             new OSMBuildings(map).set(geoJSON);
 
