--- a/LA.html
+++ b/LA.html
@@ -19,7 +19,8 @@
 
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css">
         <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet-src.js"></script>
-        <script src="dist/OSMBuildings-Leaflet.js"></script>
+        <script src="dist/OSMBuildings-Leaflet.debug.js"></script>
+        <script src="data/LA_ct.geojson" type="text/javascript"></script>
         
     </head>
     
@@ -32,51 +33,56 @@
 
         <script type="text/javascript">
 
-            var geoJSON = {
-                "type":"FeatureCollection",
-                "crs":{"type":"name",
-                    "properties":{"name":"urn:ogc:def:crs:OGC:1.3:CRS84"}
-                },
-                "features":[{
-                    "type":"Feature",
-                    "properties":{
-                            "LotSales":170069,
-                            "SalPPerson":58,
-                            "height":58,
-                            "minHeight":0,
-                            "wallColor": "rgb(255,0,0)",
-                            "roofColor": "rgb(255,128,0)"
-                    },
-                    "geometry":{
-                        "type":"Polygon",
-                        "coordinates":[[
-                                [-118.38103100008132,34.04532399970256],
-                                [-118.37681900009754,34.044532000051476],
-                                [-118.37720599995767,34.03824199956839],
-                                [-118.38295099958968,34.039821999585364],
-                                [-118.38103100008132,34.04532399970256]
-                                ]
-                        ]
-                    }
-                }]
-            };
-
-            var map = L.map('map').setView([34.061148, -118.310832], 12);  
+            var map = new L.map('map').setView([34.0197, -118.2028], 15);  
 
             new L.Control.Zoom({position: 'bottomleft'}).addTo(map);
 
-            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IjZjNmRjNzk3ZmE2MTcwOTEwMGY0MzU3YjUzOWFmNWZhIn0.Y8bhBaUMqFiPrDRW9hieoQ', {
+            new L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IjZjNmRjNzk3ZmE2MTcwOTEwMGY0MzU3YjUzOWFmNWZhIn0.Y8bhBaUMqFiPrDRW9hieoQ', {
                 maxZoom: 18,
+                minZoom: 9,
                 attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
                     '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
                     'Imagery © <a href="http://mapbox.com">Mapbox</a>',
                 id: 'mapbox.light'
             }).addTo(map);
 
+            // var geoJSON = {
+            //     "type":"FeatureCollection",
+            //     "features":[{
+            //         "type":"Feature",
+            //         "id": 134,
+            //         "geometry":{
+            //             "type":"Polygon",
+            //             "coordinates":[[
+            //                 [-118.31711200041904,33.99996699987696],
+            //                 [-118.3171070001885,34.003691999885675],
+            //                 [-118.31600999996213,34.00369600007019],
+            //                 [-118.3089140000816,34.003716000093156],
+            //                 [-118.3056820003246,34.00370999981647],
+            //                 [-118.30454800019062,34.00370699967812],
+            //                 [-118.30455200037508,33.99914299964956],
+            //                 [-118.30455399956801,33.99824300041393],
+            //                 [-118.30455699970629,33.99506599959604],
+            //                 [-118.30892699978179,33.99507399996497],
+            //                 [-118.31133900039512,33.99506400040315],
+            //                 [-118.31711999988869,33.99503600001121],
+            //                 [-118.31711200041904,33.99996699987696]
+            //             ]]
+            //         },
+            //         "properties":{
+            //             "wallColor": "rgb(255,0,0)",
+            //             "roofColor": "rgb(255,128,0)",
+            //             "height":580,
+            //             "minHeight":0
+            //         }
+            //     }]
+            // };
 
-            L.geoJson(geoJSON).addTo(map);
-
-            new OSMBuildings(map).set(geoJSON);
+            // L.geoJson(geoJSON).addTo(map);
+            // console.log(geoJSON);
+            new OSMBuildings(map).set(LA_ct);
+            // load(test);
+            // console.log(test);
 
         </script>
 
