California map - with school districts, lottery retailers & schools in 100 worst census tracts

--- a/ca_lottery.html
+++ b/ca_lottery.html
@@ -46,7 +46,7 @@ var stamenLayer = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_nolabels/{
 var muniGrid = L.mapbox.gridLayer('edbuild.CA_LotterySales').addTo(map);
 var muniControl = L.mapbox.gridControl(muniGrid, {follow: false}).addTo(map); 
 
-addLayer(L.mapbox.tileLayer('edbuild.CA_CT_MHI_13'), 'Median Household Income', 3);
+addLayer(L.mapbox.tileLayer('edbuild.o0kbkc3l'), 'California School Districts', 3);
 addLayer(L.mapbox.tileLayer('edbuild.CA_CT_Poverty13'), 'Poverty Rate', 4);
 addLayer(L.mapbox.tileLayer('edbuild.95702fa3'), 'Student Poverty Rate', 5);
 addLayer(L.mapbox.tileLayer('edbuild.CA_LotterySales'), 'Lottery Retailers', 5);
