--- a/3d/LA.html
+++ b/3d/LA.html
@@ -59,7 +59,7 @@
 
             var OSMBuildings3d;
 
-            L.geoJson(LA_ct, { 
+            var la2d = L.geoJson(LA_ct, { 
                 style: function(feature) {
                     return {
                         color: feature.properties['roofColor'],
@@ -67,19 +67,29 @@
                         fillOpacity: 0.75,
                         weight: 1.5
                     }
+                },
+                onEachFeature: function (feature, layer) {
+                    if (feature.properties) {
+                        var popupString = '<div class="popup">';
+                            popupString += 'Population: ' + feature.properties['l_Pop'] + '<br />' + 'Students: ' + feature.properties['l_Pupils'] + '<br />' + 'Total Lottery Sales: ' + feature.properties['l_Sales'] + '<br />' + 'Total Lottery Allocations: ' + feature.properties['l_Allox'] + '<br />' + 'Net Loss to Lottery: ' + feature.properties['l_NetLoss'];
+                        popupString += '</div>';
+                        layer.bindPopup(popupString);
+                    }
                 }
             }).addTo(map);
 
            
             function add3d(geojson){
                 OSMBuildings3d = new OSMBuildings(map).set(geojson);
+                setTimeout(function() { map.removeLayer(la2d); }, 500);
             }
 
-            setTimeout(function() { add3d(LA_ct); }, 1000);
+            setTimeout(function() { add3d(LA_ct); }, 1500);
 
             twoD_button.onclick = function () {
                 twoD_button.className = '';
                 threeD_button.className = 'active';
+                map.addLayer(la2d);
                 map.removeLayer(OSMBuildings3d);
                 map.setView([34.063136, -118.448768], 10);
             }
@@ -88,7 +98,7 @@
                 twoD_button.className = 'active';
                 map.addLayer(OSMBuildings3d);
                 map.setView([34.358535, -118.480424], 9); 
-                map.removeLayer(overlay);
+                setTimeout(function() { map.removeLayer(la2d); }, 500);
             }
 
 
