--- a/3d/Sac.html
+++ b/3d/Sac.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css">
         <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet-src.js"></script>
         <script src="dist/OSMBuildings-Leaflet.debug.js"></script>
-        <script src="data/Sac_ctcap.geojson" type="text/javascript"></script>
+        <script src="data/Sac_percapita.geojson" type="text/javascript"></script>
         <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
         <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css" />
         
@@ -59,7 +59,7 @@
 
             var OSMBuildings3d;
 
-            L.geoJson(Sac_ct, { 
+            var sac2d = L.geoJson(Sac_ct, { 
                 style: function(feature) {
                     return {
                         color: feature.properties['roofColor'],
@@ -67,12 +67,21 @@
                         fillOpacity: 0.75,
                         weight: 1.5
                     }
+                },
+                onEachFeature: function (feature, layer) {
+                    if (feature.properties) {
+                        var popupString = '<div class="popup">';
+                            popupString += 'Population: ' + feature.properties['l_Pop'] + '<br />' + 'Students: ' + feature.properties['l_Pupils'] + '<br />' + 'Total Lottery Sales: ' + feature.properties['l_Sales'] + '<br />' + 'Total Lottery Allocations: ' + feature.properties['l_Allox'] + '<br />' + 'Net Loss to Lottery: ' + feature.properties['l_NetLoss'];
+                        popupString += '</div>';
+                        layer.bindPopup(popupString);
+                    }
                 }
             }).addTo(map);
 
            
             function add3d(geojson){
                 OSMBuildings3d = new OSMBuildings(map).set(geojson);
+                setTimeout(function() { map.removeLayer(sac2d); }, 500);
             }
 
             setTimeout(function() { add3d(Sac_ct); }, 1000);
@@ -81,6 +90,7 @@
             twoD_button.onclick = function () {
                 twoD_button.className = '';
                 threeD_button.className = 'active';
+                map.addLayer(sac2d);
                 map.removeLayer(OSMBuildings3d);
                 map.setView([38.566289, -121.476565], 11);
             }
@@ -89,6 +99,7 @@
                 twoD_button.className = 'active';
                 map.addLayer(OSMBuildings3d);
                 map.setView([38.625449, -121.375086], 10); 
+                setTimeout(function() { map.removeLayer(sac2d); }, 500);
             }
 
 
