--- a/3d/SJ_East.html
+++ b/3d/SJ_East.html
@@ -59,7 +59,7 @@
 
             var OSMBuildings3d;
 
-            L.geoJson(SJ_ES, { 
+            var sj2d = L.geoJson(SJ_ES, { 
                 style: function(feature) {
                     return {
                         color: feature.properties['roofColor'],
@@ -67,12 +67,21 @@
                         fillOpacity: 0.75,
                         weight: 1.5
                     }
+                },
+                onEachFeature: function (feature, layer) {
+                    if (feature.properties) {
+                        var popupString = '<div class="popup">';
+                            popupString += 'Population: ' + feature.properties['l_Pop'] + '<br />' + 'Students: ' + feature.properties['l_Pupils'] + '<br />' + 'Total Lottery Sales: ' + feature.properties['l_Sales'] + '<br />' + 'Total Lottery Allocations: ' + feature.properties['l_Allox'] + '<br />' + 'Net Loss to Lottery: ' + feature.properties['l_NetLoss'];
+                        popupString += '</div>';
+                        layer.bindPopup(popupString);
+                    }
                 }
             }).addTo(map);
 
            
             function add3d(geojson){
                 OSMBuildings3d = new OSMBuildings(map).set(geojson);
+                setTimeout(function() { map.removeLayer(sj2d); }, 500);
             }
 
             setTimeout(function() { add3d(SJ_ES); }, 1000);
@@ -80,6 +89,7 @@
             twoD_button.onclick = function () {
                 twoD_button.className = '';
                 threeD_button.className = 'active';
+                map.addLayer(sj2d);
                 map.removeLayer(OSMBuildings3d);
                 map.setView([37.317686, -121.862737], 11);
             }
@@ -88,6 +98,7 @@
                 twoD_button.className = 'active';
                 map.addLayer(OSMBuildings3d);
                 map.setView([37.692203, -122.075625], 9); 
+                setTimeout(function() { map.removeLayer(sj2d); }, 500);
             }
 
         </script>
